# pxruler

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  build_debs.sh  build_debs.sh.in  config.status  configure  configure.ac  pxruler.spec  pxruler.spec.in
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: Makefile  Makefile.am  Makefile.in  changelog  changelog.src  control.src  copyright
debian/source/: Makefile  Makefile.am  Makefile.in
docs/: Makefile  Makefile.am  Makefile.in  pxruler.1  pxruler.xml
helpers/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in
src/pxruler/: Makefile  Makefile.am  Makefile.in  cmdswitch.cpp  cmdswitch.h  moc_pxruler.cpp  pxruler  pxruler.cpp  pxruler.h
src/pxruler/.deps/: cmdswitch.Po  moc_pxruler.Po  pxruler.Po
